tests/blackbox_tests/python-format-string-argument-type-mismatch.pot
# I: python-format-string-unnamed-plural-argument msgid '%d quick brown fox jumps over the lazy dog.'
# E: python-format-string-argument-type-mismatch msgid '%d quick brown fox jumps over the lazy dog.': int (msgid) != str (msgid_plural)
# E: python-format-string-argument-type-mismatch msgid '%(N)d quick brown fox jumps over the lazy dog.': int (msgid) != str (msgid_plural)

#, fuzzy
msgid ""
msgstr ""
"Project-Id-Version: Gizmo Enhancer 1.0\n"
"Report-Msgid-Bugs-To: gizmoenhancer@jwilk.net\n"
"POT-Creation-Date: 2012-11-01 14:42+0100\n"
"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
"Language-Team: LANGUAGE <LL@li.org>\n"
"Language: \n"
"MIME-Version: 1.0\n"
"Content-Type: text/plain; charset=CHARSET\n"
"Content-Transfer-Encoding: 8bit\n"
"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"

#, python-format
msgid "%d quick brown fox jumps over the lazy dog."
msgid_plural "%s quick brown foxes jump over the lazy dog."
msgstr[0] ""
msgstr[1] ""

#, python-format
msgid "%(N)d quick brown fox jumps over the lazy dog."
msgid_plural "%(N)s quick brown foxes jump over the lazy dog."
msgstr[0] ""
msgstr[1] ""
